<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="true"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/menu_icon_description"
        android:scaleType="fitXY"

        android:src="@drawable/ic_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="24dp"
        tools:layout_conversion_absoluteWidth="24dp" />

    <TextView
        android:id="@+id/brandText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:layout_margin="16dp"

        android:fontFamily="@font/robotoslab_bold"
        app:layout_constraintEnd_toStartOf="@id/shoppingBagIcon"
        app:layout_constraintStart_toEndOf="@id/menuIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="24dp"
        tools:layout_conversion_absoluteWidth="76dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/robotoslab_medium"
        android:text="@string/heading_1"
        android:textAlignment="center"

        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_new_arrival"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/rv_new_arrival"
        app:layout_constraintTop_toBottomOf="@+id/menuIcon"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/shoppingBagIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"

        android:src="@drawable/ic_shopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="24dp"
        tools:layout_conversion_absoluteWidth="24dp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_new_arrival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuIcon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/robotoslab_medium"
        android:text="@string/popular_outfits"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_new_arrival" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_outfit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"

            app:layout_constraintTop_toBottomOf="@+id/textView3"
            />
        <Button
            android:id="@+id/about_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Us"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/rv_popular_outfit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>